--- a/website/_sass/partials/_header.scss
+++ b/website/_sass/partials/_header.scss
@@ -1,10 +1,10 @@
 header{
     background:{
         size: auto;
-        repeat: repeat-x;
+        repeat: repeat;
         image: url(../img/bg.jpg);
     }
-    height: 65px;
+    height: 150px;
     text-align: center;
     position: relative;
     max-width: 100%;
