--- a/website/_sass/partials/_general.scss
+++ b/website/_sass/partials/_general.scss
@@ -70,9 +70,9 @@ section{
     > ul,
     > ol,
     > div{
-        text-align: justify;
-        padding-left: 5%;
-        padding-right: 5%;
+        text-align: left;
+        padding-left: 10%;
+        padding-right: 20%;
         box-sizing: border-box;
     }
 
@@ -82,6 +82,12 @@ section{
     }
     > ol{
         padding-left: calc(5% + 40px);
+    }
+
+    >h2, h3, h4, h5 {
+        padding-left: 10%;
+        padding-right: 20%;
+        padding-top: 20px;
     }
 }
 
@@ -116,7 +122,6 @@ h2 {
     font-size: 2em;
     width: 99%;
     text-align: left;
-    border-bottom: 5px solid $green;
     margin: 0 auto 20px;
     line-height: 0.63;
 
@@ -133,7 +138,6 @@ h3{
     font-size: 1.7em;
     width: 99%;
     text-align: left;
-    border-bottom: 4px solid $green;
     margin: 0 auto 20px;
     line-height: 0.65;
 
@@ -149,7 +153,6 @@ h4{
     font-size: 1.5em;
     width: 99%;
     text-align: left;
-    border-bottom: 3px solid $green;
     margin: 0 auto 18px;
     line-height: 0.67;
 
@@ -166,7 +169,6 @@ h5{
     font-size: 1.3em;
     width: 99%;
     text-align: left;
-    border-bottom: 2px solid $green;
     margin: 0 auto 15px;
     line-height: 0.68;
 
