--- a/website/_sass/partials/_general.scss
+++ b/website/_sass/partials/_general.scss
@@ -92,7 +92,7 @@ section{
 }
 
 h1, h2, h3, h4, h5, h6{
-    padding: 0;
+    padding: 10px;
     font-weight: $bold;
     line-height: 1;
     color: $green;
