--- a/website/_layouts/index.html
+++ b/website/_layouts/index.html
@@ -4,7 +4,7 @@
         {% include head.html %}
     </head>
 
-    <body>
+    <body style="overflow-x: hidden;">
         <div class="container">
             <div class="overview">
                 <span class="toggle">close</span>
