--- a/website/_sass/modules/_typography.scss
+++ b/website/_sass/modules/_typography.scss
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Andika:300,300italic,700,700italic);
+@import url(http://fonts.googleapis.com/css?familyRoboto:300,300italic,700,700italic);
 
-$roboto: "Andika", sans-serif;
+$roboto: "Roboto", "Calibri", sans-serif;
 
 // Roboto Font Weights
 $bold: 700;
