--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -11,7 +11,7 @@
             View friends
           </a>
 
-          <a  class="item item-icon-left">
+          <a  ng-click="goAddFriend()"class="item item-icon-left">
             <i class="icon ion-person-add"></i>
             Add friend
           </a>
@@ -31,9 +31,9 @@
             View friend/route requests
           </a>
 
-          <a  class="item item-icon-left">
+          <a  ng-click="goProfile()" class="item item-icon-left">
             <i class="icon ion-settings"></i>
-            Account settings
+            My profile
           </a>
 
           <a href="#"  style="background:red" class="item item-icon-left">
