--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Dashboard">
       <ion-content class="padding-top padding-bottom login-bg">
         <div class="row">
-          <h3>Welcome back, {{ user_data.username }} !</h3>
+          <h3>Welcome back, {{ user_data.firstname }} {{ user_data.lastname }} !</h3>
         </div>
 
         <div class="list card">
@@ -11,12 +11,12 @@
             View friends
           </a>
 
-          <a  ng-click="goAddFriend()"class="item item-icon-left">
+          <a  ng-click="goAddFriend()" class="item item-icon-left">
             <i class="icon ion-person-add"></i>
             Add friend
           </a>
 
-          <a  ng-click="goCreateRoute()"class="item item-icon-left">
+          <a  ng-click="goCreateRoute()" class="item item-icon-left">
             <i class="icon ion-fork-repo"></i>
             Create Route
           </a>
