added accept and decline request. fixed search bug so it does not return friends in search

--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -11,6 +11,11 @@
             View friends
           </a>
 
+          <a ng-click="goViewFrRequests()" class="item item-icon-left">
+            <i class="icon ion-paper-airplane"></i>
+            View friend requests
+          </a>
+
           <a  ng-click="goAddFriend()" class="item item-icon-left">
             <i class="icon ion-person-add"></i>
             Add friend
