UI cusotmize routes in progress:

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -1,7 +1,7 @@
 /* Empty. Add your own CSS if you like */
 
 .login-bg{
-  background-image: url('../img/bg2.jpg');
+  /*background-image: url('../img/bg2.jpg');*/
   background-size: cover;
 }
 
