added text to speech

--- a/app/www/templates/add_friend.html
+++ b/app/www/templates/add_friend.html
@@ -4,7 +4,7 @@
         <div class="row">
           <div class="col col-33">
 
-            <a ng-click="goBack()"  class="icon-left button button-clear button-dark ion-chevron-left">
+            <a on-tap="goBack()" on-hold="speakText('Go back')"  class="icon-left button button-clear button-dark ion-chevron-left">
               Back
             </a>
           </div>
@@ -28,7 +28,6 @@
             </button>
 
       </a>
-
     </div>
 
 
