--- a/app/www/templates/customize_route.html
+++ b/app/www/templates/customize_route.html
@@ -1,13 +1,18 @@
 <ion-view view-title="Customize Route">
     <ion-content class="padding login-bg">
-		
+		<map on-create="mapCreated(map)" style="width: 100%; height: 70vh; position:absolute; "></map>
 		<div class="list">
-			<a ng-click="goBack()"  class="item item-icon-left">
-			  <i class="icon ion-chevron-left"></i>
-			  Go back
-			</a>
+			<div class="item" style="width: 100%; height: 11vh; position: absolute; top: 71vh">
+				<div class="button" style=" position: relative; right: 2vw; ">
+					Back
+				</div>
+				<div class="button button-balanced" style="position: relative; left: 49vw;">
+	
+					Save&nbsp <i class="icon ion-arrow-right-a" style="position: relative; top: 0.3vh"></i>
+
+				</div>
+			</div>
 		</div>
-		
-		<map on-create="mapCreated(map)" style="width: 100%; height: 100vh"></map>
 	</ion-content>
+
 </ion-view>
