create route and customize route

--- a/app/www/templates/create_route.html
+++ b/app/www/templates/create_route.html
@@ -11,12 +11,26 @@
 		<div class="list">
 			<label class="item item-input item-stacked-label">
 				<span class="input-label">Start</span>
-				<input type="text" placeholder="Enter starting address" > 
+				<input ng-model="startAddress.address" ng-change="getSuggestions(startAddress.address, 's')" ng-model-options="{ debounce: 1500 }"  type="text" placeholder="Enter starting address" > 
 			</label>
+
+			<div ng-if="suggestionFlag == 's' && suggestions.length > 0">
+				<div ng-repeat="suggestion in suggestions">
+					<label class="item" style="background-color: #F8F8F8;">{{suggestion.address}}</label>
+				</div>
+			</div>
+			
 			<label class="item item-input item-stacked-label">
 			<span class="input-label">End</span>
-				<input type="text" placeholder="Enter ending address">
+				<input ng-model="endAddress.address" ng-change="getSuggestions(endAddress.address, 'e')" ng-model-options="{ debounce: 1500 }" type="text" placeholder="Enter ending address">
 			</label>
+
+			<div ng-if="suggestionFlag == 'e' && suggestions.length > 0">
+				<div ng-repeat="suggestion in suggestions">
+					<label class="item" style="background-color: #F8F8F8;">{{suggestion.address}}</label>
+				</div>
+			</div>
+
 		</div>
 
 		<div ng-if="wpAddresses.length > 0">
@@ -24,8 +38,13 @@
 				<div ng-repeat="(i, wp) in wpAddresses track by $index">
 					<label class="item item-input item-label">
 						<span class="input-label">Way Point {{i+1}}</span>
-						<input ng-model="wp" type="text" > 
+						<input ng-model="wp.address" ng-change="getSuggestions(wp.address, 'wp', i)" ng-model-options="{ debounce: 1500 }" type="text" > 
 					</label>
+					<div ng-if="suggestionFlag == 'wp{{i}}' && suggestions.length > 0">
+						<div ng-repeat="suggestion in suggestions">
+							<label class="item" style="background-color: #F8F8F8;">{{suggestion.address}}</label>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
