--- a/app/www/templates/customize_route.html
+++ b/app/www/templates/customize_route.html
@@ -3,7 +3,7 @@
 		<map on-create="mapCreated(map)" style="width: 100%; height: 70vh; position:absolute; "></map>
 		<div class="list">
 			<div class="item" style="width: 100%; height: 11vh; position: absolute; top: 71vh">
-				<div class="button" style=" position: relative; right: 2vw; ">
+				<div class="button" ng-click="goBack()" style=" position: relative; right: 2vw;">
 					Back
 				</div>
 				<div class="button button-balanced" style="position: relative; left: 49vw;">
