--- a/app/www/templates/friend_requests.html
+++ b/app/www/templates/friend_requests.html
@@ -2,10 +2,9 @@
 
   <ion-content class="padding-top padding-bottom">
         <div class="row">
-          <div class="col col-40">
-            <a ng-click="goBack()"  class="item item-icon-left">
-              <i class="icon ion-chevron-left"></i>
-              Go back
+          <div class="col col-33">
+            <a ng-click="goBack()"  class="icon-left button button-clear button-dark ion-chevron-left">
+              Back
             </a>
           </div>
         </div>
@@ -36,10 +35,10 @@
                 </a>
               </div>
             </div>
-        
+
 
 <!--     <div class="list">
-  <div ng-if="filteredPeople.length > 0 ">       
+  <div ng-if="filteredPeople.length > 0 ">
    <a class="item item-avatar item-button-right" ng-repeat="item in filteredPeople" >
           <img src="img/avatar.jpg">
           <h2>{{ item.firstname + " " + item.lastname }}</h2>
