--- a/app/www/templates/friends.html
+++ b/app/www/templates/friends.html
@@ -1,16 +1,14 @@
 <ion-view view-title="Friends">
-      <ion-content class="padding-top padding-bottom login-bg">
+      <ion-content class="padding-top padding-bottom">
         <div class="row">
-          <div class="col col-40">
-            <a ng-click="goBack()"  class="item item-icon-left">
-              <i class="icon ion-chevron-left"></i>
-              Go back
+          <div class="col col-33">
+
+            <a ng-click="goBack()"  class="icon-left button button-block button-clear button-dark ion-chevron-left">
+              Back
             </a>
           </div>
-          <div class="col"></div>
-          <div class="col col-50">
-            <a ng-click="goAddFriend()"  class="item item-icon-right">
-              <i class="icon ion-person-add"></i>
+          <div class="col col-offset-20">
+            <a ng-click="goAddFriend()"  class="icon-right button button-block button-positive ion-person-add">
               Add friend
             </a>
           </div>
