--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Login">
 
-    <ion-content class="padding login-bg">
+    <ion-content class="padding">
       <div class="row">
         <h4  ><b>Cities Unlocked is a unique collaboration between Guide Dogs and Microsoft,
           which explores the potential technology has to enable people living with sight
