--- a/app/www/templates/profile.html
+++ b/app/www/templates/profile.html
@@ -2,11 +2,10 @@
 
   <ion-content class="padding-top padding-bottom has-footer">
 
-    <a ng-click="goBack()"  class="item item-icon-left">
-      <i class="icon ion-chevron-left"></i>
-      Go back
-    </a>
 
+      <a ng-click="goBack()"  class="icon-left button button-clear button-dark ion-chevron-left">
+        Back
+      </a>
     <div class="container">
       <div class="row">
         <div class="col col-offset-20 col-60">
