--- a/app/www/templates/register.html
+++ b/app/www/templates/register.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Register">
-    <ion-content class="padding-top padding-bottom login-bg">
+    <ion-content class="padding-top padding-bottom">
         <div class="list">
           <label class="item item-input item-stacked-label">
             <span class="input-label">First Name</span>
