--- a/app/www/templates/add_friend.html
+++ b/app/www/templates/add_friend.html
@@ -2,11 +2,11 @@
 
   <ion-content class="padding-top padding-bottom">
         <div class="row">
-          <div class="col col-40">
-          <a ng-click="goBack()"  class="item item-icon-left">
-            <i class="icon ion-chevron-left"></i>
-            Go back
-          </a>
+          <div class="col col-33">
+
+            <a ng-click="goBack()"  class="icon-left button button-clear button-dark ion-chevron-left">
+              Back
+            </a>
           </div>
           <div class="col">
           <input type="text" ng-change="updateList(searchQuery)" ng-model="searchQuery" name="search-bar"
