--- a/app/www/templates/customize_route.html
+++ b/app/www/templates/customize_route.html
@@ -1,13 +1,13 @@
 <ion-view view-title="Customize Route">
-    <ion-content class="padding login-bg" scroll="false">
+    <ion-content class="padding" scroll="false">
 		<map on-create="mapCreated(map)" style="width: 100%; height: 70vh; position:absolute; "></map>
 		<div class="list">
 			<div class="item" style="width: 100%; height: 11vh; position: absolute; top: 71vh">
 				<div class="button" ng-click="goBack()" style=" position: relative; right: 2vw;">
 					Back
 				</div>
-				<div class="button button-balanced" style="position: relative; left: 49vw;">
-	
+				<div class="button button-balanced" ng-click="saveRoute()" style="position: relative; left: 49vw;">
+
 					Save&nbsp <i class="icon ion-arrow-right-a" style="position: relative; top: 0.3vh"></i>
 
 				</div>
