--- a/app/www/templates/my_routes.html
+++ b/app/www/templates/my_routes.html
@@ -19,7 +19,15 @@
     <div class="row">
       <h3>
         <div ng-if="!show_mine"> My routes ({{ my_routes.length }}): </div>
-        <div ng-if="show_mine"> Shared routes({{ shared_routes.length }}):</div>
+        <div ng-if="show_mine"> 
+        <div ng-if="shared_routes.length == 0">
+          No pending routes
+        </div>
+        <div ng-if="sharedRoutes.length > 0">
+          Shared routes({{ shared_routes.length }}):
+        </div>
+        
+        </div>
       </h3>
     </div>
 
@@ -27,7 +35,7 @@
     <div class="card-wrapper">
 
       <div id="myRoutes" ng-if="!show_mine">
-        <a ng-click="seeRoute(route.id)" ng-repeat="route in my_routes">
+        <a ng-click="seeRoute(route)" ng-repeat="route in my_routes" on-hold="showActions(route.id)">
           <div class="card">
             <div class="item item-divider">
               {{ route.title }}
@@ -41,7 +49,8 @@
       </div>
 
       <div id="sharedRoutes" ng-if="show_mine">
-        <a ng-click="seeRoute(route.id)" ng-repeat="route in shared_routes">
+
+        <a ng-click="seeRoute(route)" ng-repeat="route in shared_routes">
           <div class="card">
             <div class="item item-divider">
               {{ route.title }}
