--- a/app/www/templates/customize_route.html
+++ b/app/www/templates/customize_route.html
@@ -12,7 +12,7 @@
 
 		  <div class="row" style="position: absolute; bottom: 2vh; left: 70vw; width: 100%; ">
 		       <div class="col">
-		         <a ng-click="goBack()" class="icon-right button button-dark ion-chevron-right">
+		         <a ng-click="saveRoute()" class="icon-right button button-dark ion-chevron-right">
 		           Save
 		         </a>
 		       </div>
