--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -43,7 +43,7 @@
             My profile
           </a>
 
-          <a href="#"  style="background:red" class="item item-icon-left">
+          <a  ng-click="logout()"  style="background:red" class="item item-icon-left">
             <i class="icon ion-log-out"></i>
             Log Out
           </a>
