--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -8,7 +8,7 @@
       </div>
 
       <h3  ng-if="data.username">
-        Hello {{ data.username }}
+        Hello!
       </h3>
       <h3 ng-if="!data.username">
         {{ default_text }}
