--- a/app/www/templates/my_routes.html
+++ b/app/www/templates/my_routes.html
@@ -61,13 +61,19 @@
         <a ng-click="sharedRoutesAction(route)" ng-repeat="route in shared_routes">
           <div class="card">
             <div class="item item-divider">
-              {{ route.title }}
+              <div class="row" >
+                <div class="col col-74">
+                 {{ route.title }}
+                </div>
+                <div class="col col-26" style="text-align: right;">
+                  {{ route.created_at | date: "d MMMM y"}}
+                </div>     
+              </div>
             </div>
             <div class="item item-text-wrap">
-              {{ route.comments }}
+              {{ route.description }}
             </div>
           </div>
-
         </a>
       </div>
     </div>
