--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -11,6 +11,14 @@
           </div>
         </div>
 
+        <button on-double-tap = "speakText('Dashboard Page. Swipe right to go back. Select 1 to view friends. Select 2 to view friend requests. Select 3 to Add a friend. Select 4 to create a route. Select 5 for my routes. Select 6 for my profile. Select 7 to log out. Double tap the screen to listen to the options again. Press and hold on the screen to record your selection.')" on-hold = record()>Default Button</button>
+
+        <div class="card">
+          <div class="item item-text-wrap">
+            {{recognizedText}}
+          </div>
+        </div>
+
         <div class="list card">
 
           <a on-tap= "goViewFriends()" on-hold="speakText('View Friends')" class="item item-icon-left">
