--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -14,7 +14,7 @@
         {{ default_text }}
       </h3>
       <label class="item item-input">
-        <input ng-model="data.username" type="text" placeholder="Email" required>
+        <input ng-model="data.username" type="text" placeholder="Email" autocorrect="off" autocapitalize="none" required>
       </label>
       <label class="item item-input">
         <input ng-model="data.password" type="password" placeholder="Password" required>
