--- a/app/www/templates/my_routes.html
+++ b/app/www/templates/my_routes.html
@@ -1,6 +1,6 @@
 <ion-view view-title="My routes">
 
-  <ion-content class="padding-top padding-bottom">
+  <ion-content class="padding-top padding-bottom" has-bouncing="false">
 
     <div class="row">
       <div class="col col-33">
