--- a/app/www/templates/view_route.html
+++ b/app/www/templates/view_route.html
@@ -9,6 +9,12 @@
         Back
       </a>
     </div>
+    <div class="col col-33 col-offset-34">
+      <a ng-click="viewDirections()" class="button button-clear button-dark icon-right ion-chevron-right">
+        Directions
+      </a>
+    </div>
+   </div>
 
   </ion-content>
 </ion-view>
