--- a/app/www/templates/my_routes.html
+++ b/app/www/templates/my_routes.html
@@ -13,6 +13,9 @@
         <a ng-click="show_mine = !show_mine" ng-model="show_mine" class="button button-positive icon-right ion-shuffle   ">
           Switch
         </a>
+
+        <button on-double-tap = "readRoutes()" on-hold = "record()">Default Button</button>
+
       </div>
 
     </div>
